src/champions/ChampionCard.css
.level-up-power {
  line-height: 1.2;
  font-size: 14px;
}

.champion-hp {
  font-size: 14px;
}

.legends {
  font-size: 11px;
}

.table-bluered,
.table-bluered > td,
.table-bluered > th,
.table-redblue,
.table-redblue > td,
.table-redblue > th {
  background: linear-gradient(90deg, #f5c6cb 50%, #b8daff 50%);
}

.table-blueyellow,
.table-blueyellow > td,
.table-blueyellow > th,
.table-yellowblue,
.table-yellowblue > td,
.table-yellowblue > th {
  background: linear-gradient(90deg, #ffeeba 50%, #b8daff 50%);
}

.table-yellowred,
.table-yellowred > td,
.table-yellowred > th,
.table-redyellow,
.table-redyellow > td,
.table-redyellow > th {
  background: linear-gradient(90deg, #f5c6cb 50%, #ffeeba 50%);
}

.table-blueyellowred,
.table-blueyellowred > td,
.table-blueyellowred > th,
.table-blueredyellow,
.table-blueredyellow > td,
.table-blueredyellow > th,
.table-redyellowblue,
.table-redyellowblue > td,
.table-redyellowblue > th,
.table-yellowredblue,
.table-yellowredblue > td,
.table-yellowredblue > th,
.table-redblueyellow,
.table-redblueyellow > td,
.table-redblueyellow > th,
.table-yelbluelowred,
.table-yelbluelowred > td,
.table-yelbluelowred > th {
  background-image: linear-gradient(90deg, #f5c6cb 33%, #ffeeba 33% 67%, #b8daff 67%);
}

@media (min-width: 576px) {
  .level-up-power {
    height: 120px;
  }
}

@media (min-width: 768px) {
  .level-up-power {
    height: 135px;
  }
}

@media (min-width: 992px) {
  .level-up-power {
    height: 85px;
  }
}

@media (min-width: 1200px) {
  .level-up-power {
    height: 100px;
  }
}

